Make sure map is visible in map widget

--- a/sundsvall_se-theme/assets/css/scss/partials/_page-widgets.scss
+++ b/sundsvall_se-theme/assets/css/scss/partials/_page-widgets.scss
@@ -24,17 +24,39 @@
 		max-width: 15em;
 	}
 
-	&__columns {
-		width: 100%;
-		@include media-breakpoint-up(md) {
-			columns: 2;
-		}
-		max-width: 54em;
+	/**
+	 * Map specifics
+	 */
+	&.widget-map &__title {
+		margin-top: 5em;
+		margin-bottom: 0;
 	}
+
+	&.widget-map &__container {
+		padding-top: 0;
+		padding-bottom: 0;
+	}
+
+}
+
+.map-description {
+	width: percentage(1/3);
+	float: left;
+	padding: 2em;
+	padding-left: 5em;
+}
+
+.map-container {
+	width: percentage(2/3);
+	float: left;
+	height: 30em;
+	position: relative;
+	overflow: visible !important;
 
 	ul {
 		list-style: none;
 		padding: 0;
 	}
+
 }
 
